<resources>
	<string name="app_name">OsmAnd-map-sample</string>

	<string name="route_info_distance_placeholder">Chưa có dữ liệu về chặng kế tiếp</string>
	<string name="route_info_no_turn">Chưa có hướng dẫn rẽ</string>
	<string name="route_info_remaining_placeholder">Khoảng cách còn lại: --</string>
	<string name="route_info_next_turn_format">%1$s</string>
	<string name="route_info_remaining_format">Khoảng cách còn lại: %1$s</string>
	<string name="route_info_remaining_with_time_format">%1$s · %2$s</string>
	<string name="follow_location_enable">Theo dõi vị trí</string>
	<string name="follow_location_disable">Dừng theo dõi</string>
	<string name="follow_navigation_enable">Theo dõi tuyến đường</string>
	<string name="follow_navigation_disable">Dừng theo dõi tuyến đường</string>
	<string name="start_navigation">Start</string>
	<string name="stop_navigation">Stop</string>
	<string name="mode_car">Car</string>
	<string name="mode_bike">Bike</string>
	<string name="mode_foot">Walking</string>
	<string name="use_opengl_render">Use OpenGL render</string>
	<string name="downloads">Downloads</string>
	<string name="follow_camera">Follow</string>
	<string name="overview">Overview</string>
	<string name="please_wait_while_we_download_resource">Please wait while we download resource</string>
	<string name="search">Search</string>
	<string name="filter">絞り込み</string>
	<string name="clear">Clear</string>
	<string name="cancel">キャンセル</string>
	<string name="destination_place">目的地</string>
	<string name="error_title">Error</string>
	<string name="ok">OK</string>
	<string name="unexpected_message">システムエラーが発生しました。\n恐れ入りますが、しばらく待ってから再度お試しください。</string>
	<string name="timeout_message">タイムアウトエラーが発生しました。\n恐れ入りますが、しばらく待ってから再度お試しください。</string>
	<string name="connection_error_message">通信エラーが発生しました。\n恐れ入りますが、しばらく待ってから再度お試しください。</string>
	<string name="map_error_out_of_bounds">地図の範囲外にいます。\n地図の範囲内に戻ってください。</string>
	<string name="error_rot_my_location_out_of_bounds">現在地がリゾート範囲外です</string>
	<string name="close">閉じる</string>
    <string name="map_error_location_disabled">位置情報が無効です。\n位置情報を有効にしてください。</string>


</resources>
