<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:id="@+id/mapView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <!--        <com.google.android.material.appbar.AppBarLayout-->
        <!--            android:id="@+id/appbar"-->
        <!--            android:layout_width="match_parent"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:elevation="5dp">-->

        <!--            <androidx.appcompat.widget.Toolbar-->
        <!--                android:id="@+id/toolbar"-->
        <!--                android:layout_width="match_parent"-->
        <!--                android:layout_height="wrap_content"-->
        <!--                android:background="?attr/colorPrimary"-->
        <!--                android:minHeight="56dp"-->
        <!--                app:titleTextColor="@color/active_buttons_and_links_text_light"-->
        <!--                tools:title="@string/app_name" />-->

        <!--        </com.google.android.material.appbar.AppBarLayout>-->

        <!--	<com.google.android.material.switchmaterial.SwitchMaterial-->
        <!--		android:id="@+id/opengl_switch"-->
        <!--		android:layout_width="match_parent"-->
        <!--		android:layout_height="wrap_content"-->
        <!--		android:paddingHorizontal="@dimen/content_padding"-->
        <!--		android:text="@string/use_opengl_render" />-->

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/route_info_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/content_padding"
            android:layout_marginTop="@dimen/content_padding_half"
            android:layout_marginBottom="@dimen/content_padding_half"
            android:padding="@dimen/content_padding"
            android:visibility="gone"
            app:cardCornerRadius="10dp"
            app:cardElevation="4dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/next_turn_icon"
                        android:layout_width="32dp"
                        android:layout_height="32dp"
                        android:layout_marginEnd="8dp"
                        android:contentDescription="@string/route_info_no_turn"
                        android:scaleType="fitCenter" />

                    <TextView
                        android:id="@+id/next_turn_distance_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/route_info_distance_placeholder"
                        android:textSize="32sp"
                        android:textStyle="bold" />

                </LinearLayout>

                <TextView
                    android:id="@+id/remaining_distance_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/route_info_remaining_placeholder"
                    android:textSize="18sp" />

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

        <!--	<com.google.android.material.button.MaterialButton-->
        <!--		android:id="@+id/follow_location_button"-->
        <!--		android:layout_width="match_parent"-->
        <!--		android:layout_height="wrap_content"-->
        <!--		android:layout_marginHorizontal="@dimen/content_padding"-->
        <!--		android:layout_marginBottom="@dimen/content_padding_half"-->
        <!--		android:text="@string/follow_location_enable" />-->


        <com.google.android.material.button.MaterialButtonToggleGroup
            android:id="@+id/vehicle_mode_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/content_padding"
            android:layout_marginBottom="@dimen/content_padding_half"
            app:singleSelection="true">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/mode_car_button"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/mode_car" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/mode_bike_button"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/mode_bike" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/mode_foot_button"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/mode_foot" />

        </com.google.android.material.button.MaterialButtonToggleGroup>

        <net.osmand.plus.views.MapViewWithLayers
            android:id="@+id/map_view_with_layers"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="36dp"
        android:animateLayoutChanges="true"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/mapView">

        <Button
            android:id="@+id/btn_over_view"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/round_button"
            android:gravity="center"
            android:text="@string/overview"
            android:textColor="@android:color/black"
            android:textSize="10sp"
            android:textStyle="bold"/>
        <Button
            android:id="@+id/follow_camera"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/round_button"
            android:gravity="center"
            android:text="@string/follow_camera"
            android:textColor="@android:color/black"
            android:textSize="10sp"
            android:textStyle="bold"/>

        <Button
            android:id="@+id/start_stop_navigation_button"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/round_button"
            android:gravity="center"
            android:textColor="@android:color/black"
            android:textSize="10sp"
            android:textStyle="bold"
            android:visibility="gone" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/ln_progress"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:orientation="vertical"
        android:gravity="center"
        android:visibility="gone"
        android:clickable="true"
        android:focusable="true"

        android:background="@color/white_80_transparent"
        >
        <ProgressBar
            android:id="@+id/progress_bar"
            style="@android:style/Widget.ProgressBar.Horizontal"

            android:layout_width="match_parent"
            android:layout_height="32dp"
            android:layout_marginHorizontal="16dp"
            android:progressBackgroundTint="@color/purple_200"
            android:progressTint="@color/purple_500"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/please_wait_while_we_download_resource"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:textColor="@color/black"
            android:textSize="18sp"
            />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
